--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "countries-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://mwiafeansong.github.io/countries-app/",
   "type": "module",
   "scripts": {
     "dev": "vite",
